--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
       color: #FFFFFF;
     }
 
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #111111;
-      padding: 10px 20px;
-      z-index: 999;
-      box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
-    }
+  header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #111111;
+  padding: 10px 20px;
+  z-index: 999;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
 
     nav {
       display: flex;
