--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ nav a.active {
         <p><strong>Peran:</strong> Backend Developer</p>
         <p>Aplikasi penjadwalan dosen dengan 5 role: Admin, Mahasiswa, Dosen, Kaprodi, Dekan.</p>
       </div>
-      <a href="detail-dibukaolshop.html" class="btn" target="_blank" rel="noopener">Lihat Detail</a>
+      <a href="https://jurnalunibi.unibi.ac.id/ojs/index.php/in_search/article/view/590" class="btn" target="_blank" rel="noopener">Lihat Detail</a>
     </div>
 
     <!-- Project 2 -->
@@ -452,14 +452,14 @@ nav a.active {
         <p><strong>Peran:</strong> Backend Developer</p>
         <p>Aplikasi arsip digital dengan 3 role: Admin, Petugas, Nasabah.</p>
       </div>
-      <a href="detail-pulsaweb.html" class="btn" target="_blank" rel="noopener">Lihat Detail</a>
+      <a href="https://github.com/Cahyamifth/re-arsip" class="btn" target="_blank" rel="noopener">Lihat Detail</a>
     </div>
 
     <!-- Project 3 -->
     <div class="project-card" data-aos="fade-up">
-      <img src="https://via.placeholder.com/300x180" alt="Aplikasi Konter">
+      <img src="https://via.placeholder.com/300x180" alt="UI/UX">
       <div style="padding: 10px 15px;">
-        <h3>Aplikasi Konter</h3>
+        <h3>INDONERIS IT COMPETTION</h3>
         <p><strong>Peran:</strong> Fullstack Developer</p>
         <p>Aplikasi transaksi dan stok produk konter berbasis web responsif.</p>
       </div>
@@ -468,9 +468,9 @@ nav a.active {
 
     <!-- Project 4 -->
     <div class="project-card" data-aos="fade-up">
-      <img src="https://via.placeholder.com/300x180" alt="Dibukaolshop">
+      <img src="https://via.placeholder.com/300x180" alt="APLIKASI WEB PENGELOLA OBAT">
       <div style="padding: 10px 15px;">
-        <h3>Dibukaolshop</h3>
+        <h3>KLINIK DOKTER ANITA PURBA</h3>
         <p><strong>Peran:</strong> Frontend Developer</p>
         <p>Platform katalog produk konter dan UMKM, terintegrasi dengan app pulsa.</p>
       </div>
