--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cahyamift | Portfolio</title>
@@ -212,7 +213,8 @@ nav a.active {
       background-image: url('assets/img/bg1.png');
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;
+      background-attachment: scroll;
+
       /* tambah overlay gelap */
       position: relative;
       z-index: 1;
@@ -228,16 +230,17 @@ nav a.active {
       z-index: -1;
     }
 
-    .projects-grid {
+   .projects-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 4 kolom */
-  gap: 30px;
-  padding: 40px;
-  max-width: 1200px; /* sesuaikan lebar maksimal */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  max-width: 1100px;
   margin: auto;
   position: relative;
   z-index: 2;
-    }
+}
+
 
     .project-card {
       background: rgba(0, 0, 0, 0.8);
@@ -251,6 +254,14 @@ nav a.active {
       position: relative;
       z-index: 2;
     }
+
+    .project-card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  aspect-ratio: 16/9;
+}
+
 
     .project-card:hover {
       transform: translateY(-5px);
@@ -709,5 +720,24 @@ nav a.active {
   });
 </script>
 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    once: true, // animasi hanya sekali
+    duration: 1000 // durasi animasi (opsional)
+  });
+</script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </body>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </html>
